<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/icon"
        android:contentDescription="@string/app_logo_description"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/mm_orange"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_marginTop="@dimen/main_activity_elements_vertical_margin"
        android:gravity="center_horizontal"
        android:textSize="@dimen/textsize_title_large"
        android:textColor="@android:color/white"
        android:text="@string/app_title"
        />

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="@dimen/main_activity_elements_vertical_margin"
        android:gravity="center_horizontal"
        android:textSize="@dimen/textsize_content_small"
        android:textColor="@android:color/white"
        android:text="@string/app_sub_title"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sub_title"
        android:layout_marginTop="@dimen/main_activity_elements_vertical_margin"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_vertical|center_horizontal"
        android:background="@color/accent"
        android:textSize="@dimen/textsize_title_small"
        android:textColor="@color/primary_text"
        android:text="@string/login"
        />

</RelativeLayout>
