<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="@dimen/toolbar_height"
    tools:context=".DagvergunningActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin"
        android:paddingBottom="40dp"
        >

        <!-- Koopman -->
        <LinearLayout
            android:id="@+id/koopman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >

            <include
                layout="@layout/dagvergunning_koopman_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin"
                android:background="@color/primary_light"
                />

            <!-- Aanwezig -->
            <TextView
                android:id="@+id/aanwezig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginRight="0dp"
                android:layout_marginEnd="0dp"
                android:paddingTop="@dimen/margin"
                android:paddingBottom="@dimen/margin"
                android:paddingLeft="@dimen/margin"
                android:paddingStart="@dimen/margin"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:textColor="@color/primary_text"
                android:textStyle="bold"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/primary_light"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/koopman_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:visibility="gone"
            android:text="@string/notice_koopman_not_selected"
            />

        <!-- Producten -->
        <LinearLayout
            android:id="@+id/producten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_title_small"
                android:textColor="@color/primary_text"
                android:textStyle="bold"
                android:text="@string/product"
                />

            <!-- Producten placeholder -->
            <TableLayout
                android:id="@+id/producten_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                />

        </LinearLayout>
        <TextView
            android:id="@+id/producten_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:visibility="gone"
            android:text="@string/notice_producten_not_selected"
            />

    </LinearLayout>
</ScrollView>